@@ -3,6 +3,7 @@ releases are sorted from youngest to oldest.
 
 version <next>:
 - Raw Captions with Time (RCWT) closed caption demuxer
+- LC3/LC3plus decoding/encoding using external library liblc3
 
 
 version 7.0:
